--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang = "es">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
+      <!-- <meta name="viewport" content="width=device-width"> -->  
         <title> Barberia Alura</title>
         <link rel = "stylesheet" href = "reset.css">
         <link rel = "stylesheet" href = "style.css">
