--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
       <!-- <meta name="viewport" content="width=device-width"> -->  
-        <title> Barberia Alura</title>
+        <title> Alura Encriptado</title>
         <link rel = "stylesheet" href = "reset.css">
         <link rel = "stylesheet" href = "style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
