--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         
         <main>   
-            <section >
+            <section class="principal">
                 <label for="mensaje">Mensaje</label>
                 <textarea cols="70" rows="10" id="mensaje" class="input-padron" required></textarea>
                     
