Campo texto encryptado

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <label for="mensaje">Mensaje</label>
                 <textarea cols="70" rows="10" id="mensaje" class="input-padron" required></textarea>
                     
+                <input type="text" name="texto_encriptado" class="Text_encryptado"/>;
             </section>
         </main>     
     </body>
