Textarea del texto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>   
             <section class="principal">
                 
-                <input type="text" name="texto" class="Texto"/>;
+                <textarea class="Texto" name="texto" rows="4" cols="50"></textarea>
                     
                 <input type="text" name="texto_encriptado" class="Text_encryptado"/>;
             </section>
