textos de fondo

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <section class="principal">
                
                 <div class="cuadrado_Texto_encryptado"></div>
-                <textarea class="Texto" name="texto"></textarea>
+                <textarea class="Texto" name="texto">Ingrese texto aquí</textarea>
                     
-                <textarea class="Text_encryptado" name="texto_encriptado" ></textarea>
+                <textarea class="Text_encryptado" name="texto_encriptado" >Copié el texto encryptado</textarea>
             </section>
         </main>     
     </body>
