Dimensiones de la página

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang = "es">
+<html lang = "es"  class="dimensiones">
     <head>
         <meta charset="UTF-8">
       <!-- <meta name="viewport" content="width=device-width"> -->  
@@ -22,7 +22,7 @@
                 <div class="cuadrado_Texto_encryptado"></div>
                 <textarea class="Texto" name="texto">Ingrese texto aquí</textarea>
                     
-                <textarea class="Text_encryptado" name="texto_encriptado" >Copié el texto encryptado</textarea>
+                <textarea class="Text_encryptado" name="texto_encriptado" >Copié el texto encriptados</textarea>
             </section>
         </main>     
     </body>
