--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         <main>   
             <section class="principal">
                
+
+
                 <div class="cuadrado_Texto_encryptado"></div>
                 <textarea class="Texto" name="texto">Ingrese texto aquí</textarea>
                     
                 <textarea class="Text_encryptado" name="texto_encriptado" >Copié el texto encriptados</textarea>
+
+                <label for="indicaciones" class = "indicacion">No se aceptan acentos</label>
             </section>
         </main>     
     </body>
