agregación de botones

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                 <textarea class="Text_encryptado" name="texto_encriptado" >Copié el texto encriptados</textarea>
 
                 <label for="indicaciones" class = "indicacion">No se aceptan acentos</label>
+
+                <button1 type="button">Estoy </button>
+                <button2 type="button"> huelga...</button>
+                <button3 type="button">uelga</button>
             </section>
         </main>     
     </body>
