--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
                 <label for="indicaciones" class = "indicacion">No se aceptan acentos</label>
 
-                <button1 type="button">Estoy </button>
-                <button2 type="button"> huelga...</button>
-                <button3 type="button">uelga</button>
+                <button1 type="button">Estoy </button1>
+                <button2 type="button"> huelga...</button2>
+                <button3 type="button">uelga</button3>
             </section>
         </main>     
     </body>
