--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <label for="indicaciones" class = "indicacion">No se aceptan acentos</label>
 
                 <button type="button" class="Encriptar_Botton">Estoy </button>
+
+                <button type="button" class="Botton_copiar">Copiar </button>
                 
             </section>
         </main>     
