--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <button type="button" class="Encriptar_Botton">Estoy </button>
 
-                <button type="button" class="Botton_copiar">Copiar </button>
+                <button type="button" class="Botton_copiar"><label class = "Texto_botton">Copiar</label> </button>
                 
             </section>
         </main>     
