--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
 
                 <label for="indicaciones" class = "indicacion">No se aceptan acentos</label>
 
-                <button type="button" class="Encriptar_Botton">Estoy </button>
-
+                
                 <button type="button" class="Botton_copiar"><label class = "Texto_botton">Copiar</label> </button>
                 
+                <div class="cuadrado_Botones">
+                    <button type="button" class="Encriptar_Botton">Encriptar</button>
+                    <button type="button" class="Desencriptar_Botton">Desencriptar </button>
+                </div>
+
             </section>
         </main>     
     </body>
