texto boton encriptar centrado

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button type="button" class="Botton_copiar"><label class = "Texto_botton">Copiar</label> </button>
                 
                 <div class="cuadrado_Botones">
-                    <button type="button" class="Encriptar_Botton">Encriptar</button>
+                    <button type="button" class="Encriptar_Botton"><label class = "Texto_Encriptar_Botton">Encriptar</label></button>
                     <button type="button" class="Desencriptar_Botton">Desencriptar </button>
                 </div>
 
