--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 
                 <div class="cuadrado_Botones">
                     <button type="button" class="Encriptar_Botton"><label class = "Texto_Encriptar_Botton">Encriptar</label></button>
-                    <button type="button" class="Desencriptar_Botton">Desencriptar </button>
+                    <button type="button" class="Desencriptar_Botton"> <label class="Texto_Desencriptar_Botton">Desencriptar</label></button>
                 </div>
 
             </section>
