--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="cuadrado_Texto_encryptado"></div>
                 <textarea class="Texto" name="texto">Ingrese texto aquí</textarea>
                     
-                <textarea class="Text_encryptado" name="texto_encriptado" >Copié el texto encriptados</textarea>
+                <textarea class="Text_encryptado" name="texto_encriptado" >Texto encriptado</textarea>
 
                 <label for="indicaciones" class = "indicacion">No se aceptan acentos</label>
 
