--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
                 <div class="cuadrado_Texto_encryptado"></div>
-                <textarea class="Texto" name="texto">Ingrese texto aquí</textarea>
+                <textarea class="Texto" name="texto" placeholder="Ingrese texto aquí"></textarea>
                     
                 <textarea class="Text_encryptado" name="texto_encriptado" >Texto encriptado</textarea>
 
