placeholder para el texto encryptado

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="cuadrado_Texto_encryptado"></div>
                 <textarea class="Texto" name="texto" placeholder="Ingrese texto aquí"></textarea>
                     
-                <textarea class="Text_encryptado" name="texto_encriptado" >Texto encriptado</textarea>
+                <textarea class="Text_encryptado" name="texto_encriptado" placeholder="Texto encriptado"></textarea>
 
                 <label for="indicaciones" class = "indicacion">No se aceptan acentos</label>
 
