--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
                 <textarea class="Texto" name="texto" placeholder="Ingrese texto aquí"></textarea>
                     
                 <textarea class="Text_encryptado" name="texto_encriptado" placeholder="Texto encriptado"></textarea>
-                <p id="warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="grey" class="bi bi-exclamation-circle-fill" viewBox="0 0 16 16">
-                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-                </svg> Solo letras minusculas y sin acentos</p>
+                <p id="warning"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="grey" class="bi bi-exclamation-circle-fill" viewBox="0 0 16 16">                </svg> Solo letras minusculas y sin acentos</p>
                 <label for="indicaciones" class = "indicacion">No se aceptan acentos</label>
 
                 
