se añade el archivo javascript para la funcionalidad

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 </div>
 
             </section>
+
+            <script src="index.js"></script>
         </main>     
     </body>
 
