--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 
                 <div class="cuadrado_Texto_encryptado"></div>
-                <textarea class="Texto" name="texto" placeholder="Ingrese texto aquí"></textarea>
+                <textarea class="Texto" id="Texto" name="texto" placeholder="Ingrese texto aquí"></textarea>
                     
-                <textarea class="Text_encryptado" name="texto_encriptado" placeholder="Texto encriptado"></textarea>
+                <textarea class="Text_encryptado"  id= "Text_encryptado" name="texto_encriptado" placeholder="Texto encriptado"></textarea>
                 <div class="advertencia">
                     <img src="exclamation_circle_fill_icon_159582.png" class="imagen-advertencia">
                     <label for="indicaciones" class = "indicacion">Solo letras minúsculas y sin acentos</label>
@@ -29,7 +29,7 @@
                 <button type="button" class="Botton_copiar"><label class = "Texto_botton">Copiar</label> </button>
                 
                 <div class="cuadrado_Botones">
-                    <button type="button" class="Encriptar_Botton"><label class = "Texto_Encriptar_Botton">Encriptar</label></button>
+                    <button type="button" class="Encriptar_Botton" id ="Encryptar"><label class = "Texto_Encriptar_Botton">Encriptar</label></button>
                     <button type="button" class="Desencriptar_Botton"> <label class="Texto_Desencriptar_Botton">Desencriptar</label></button>
                 </div>
 
