primera prueba función desencriptar

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <label for="indicaciones" class = "indicacion">Solo letras minúsculas y sin acentos</label>
                 </div>    
                 
-                <button type="button" class="Botton_copiar"><label class = "Texto_botton">Copiar</label> </button>
+                <button type="button" class="Botton_copiar" id ="Copiar"><label class = "Texto_botton">Copiar</label> </button>
                 
                 <div class="cuadrado_Botones">
                     <button type="button" class="Encriptar_Botton" id ="Encryptar"><label class = "Texto_Encriptar_Botton">Encriptar</label></button>
-                    <button type="button" class="Desencriptar_Botton"> <label class="Texto_Desencriptar_Botton">Desencriptar</label></button>
+                    <button type="button" class="Desencriptar_Botton" id ="Desencriptar"> <label class="Texto_Desencriptar_Botton">Desencriptar</label></button>
                 </div>
 
             </section>
