--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     </body>
 
     <footer>
-
-        
+        <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
     </footer>
 
 </html>
