se modifico el texto de footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </body>
 
     <footer>
-        <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
+        <p class="datos_del_programador">Página creada por Saul Luna Minor</p>
     </footer>
 
 </html>
