se añade logo de git hub

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </body>
 
     <footer>
+        <img src="logo_git.png">
         <p class="datos_del_programador">Página creada por Saul Luna Minor</p>
     </footer>
 
