--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </body>
 
     <footer>
-        <img class = "logo_git" src="logo_git.png"/>
+        <a title="git personal" href="https://github.com/tiocalvispolimarch"></a><img class = "logo_git" src="logo_git.png"/>
         <p class="datos_del_programador">Página creada por Saul Luna Minor</p>
     </footer>
 
