alinacion de imagenes del footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
     </body>
 
     <footer>
-        <a title="git personal" href="https://github.com/tiocalvispolimarch"></a><img class = "logo_git" src="logo_git.png"/>
+        <div class="imagenes_footer">
+            <img class = "logo_git" src="logo_git.png"/>
+            <img class = "logo_linke" src="logo_linke.png"/>
+        </div>
+        
         <p class="datos_del_programador">Página creada por Saul Luna Minor</p>
     </footer>
 
