--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <footer>
         <div class="imagenes_footer">
-            <img class = "logo_git" src="logo_git.png"/>
-            <img class = "logo_linke" src="logo_linke.png"/>
+            <a href="https://github.com/tiocalvispolimarch"><img class = "logo_git" src="logo_git.png"/></a>
+            <a href="https://www.linkedin.com/in/saul-luna-minor-73768a216/"></a><img class = "logo_linke" src="logo_linke.png"/></a>
         </div>
         
         <p class="datos_del_programador">Página creada por Saul Luna Minor</p>
