link para el logo de linkedin

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <footer>
         <div class="imagenes_footer">
             <a href="https://github.com/tiocalvispolimarch"><img class = "logo_git" src="logo_git.png"/></a>
-            <a href="https://www.linkedin.com/in/saul-luna-minor-73768a216/"></a><img class = "logo_linke" src="logo_linke.png"/></a>
+            <a href="https://www.linkedin.com/in/saul-luna-minor-73768a216/"><img class = "logo_linke" src="logo_linke.png"/></a>
         </div>
         
         <p class="datos_del_programador">Página creada por Saul Luna Minor</p>
